# witboost-dbt-workload-template

./: README.md  mkdocs.yml  template.yaml
.gitlab/merge_request_templates/: standard.md
docs/: index.md
policies/: dbt.cue
skeleton/: .gitignore  .gitlab-ci.yml  README.md  catalog-info.yaml  dbt_project.yml  mkdocs.yml  pyproject.toml  setup.cfg
skeleton/artifacts/: dbt_project.yml  profiles.yml
skeleton/docs/: index.md
