[metadata]
name = dbt_workload
author = Agile Lab
author_email = sahith.yerram@agilelab.it
description = This package is used as an input to the Specific Provisioner
maintainer = Agile Lab S.r.l
license = Apache v2
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache v2 License

[options]
python_requires = >=3.7
packages=find:
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
    docs*
    mkdocs.yml
    README.md

[options.package_data]
dbt_workload = version.py

[tool.setuptools_scm]
write_to = version.py
fallback_version = 0.1.0
version_scheme = semver
local_scheme = no-local-version